# demo_ffmpeg_vaapi_gl

./: .gitignore  CMakeLists.txt  README.md
resources/: shader.fs  shader.vs
src/: config.h  data.h  draw.c  draw.h  main.c  player.c  player.h  queue.c  queue.h  recorder.c  recorder.h  render.c  render.h  resources.h  resources.s  shapes.c  shapes.h  util.c  util.h
